// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propToStyle() when recives an argument with breakpoints renders only the recived ones 1`] = `
Array [
  Array [
    "@media only screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`propToStyle() when recives an argument with breakpoints renders two or more breakpoints resolution 1`] = `
Array [
  Array [
    "@media only screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media only screen and (min-width:",
    "768",
    "px){",
    "text-align: right;",
    "}",
  ],
]
`;
